--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,7 +1,6 @@
 
 <%= simple_form_for(@client) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+    <%= render 'shared/errors', object: @client%>
 
   <div class="form-inputs">
     <%= f.input :clientid %>
