--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,7 +1,6 @@
 
 <%= simple_form_for(@product) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+  <%= render 'shared/errors', object: @product%>
 
   <div class="row">
     <div class="col-6">
