--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,67 +1,55 @@
 <div class="row align-items-center mt-3 mb-3">
-<div class="col-2 ">
-  <div class="col-md-12 p-0">
-    <div class="h3">Товары</div>
-    <div class="h6">Всего - <%= Product.count %></div>
-    <div class="h6">Отфильтровано: <%=@products.count%></div>
+  <div class="col-2 ">
+    <div class="col-md-12 p-0">
+      <div class="h3">Товары</div>
+      <div class="h6">Всего - <%= Product.count %></div>
+      <div class="h6">Отфильтровано: <%=@products.count%></div>
+    </div>
   </div>
-</div>
-<div class="col-10 pl-0 pr-0 row">
-  <!-- <div class="col-12">
-    <div class="btn-group p-0" role="group" aria-label="Button group with nested dropdown">
-      <div class="btn-group" role="group">
-        <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle btn-sm" data-bs-toggle="dropdown">Действия</button>
-        <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-          <%# link_to 'New Product', new_product_path, class: 'dropdown-item' %>
-        </div>
+  <div class="col-10 pl-0 pr-0 row">
+    <%= search_form_for @search, {class: 'form-inline col-12 pl-0 pr-0'} do |f| %>
+      <div class="input-group input-group-sm">
+        <%= f.search_field :title_cont , placeholder: 'title', class: "form-control", style: "max-width: 180px;" %>
+        <%= button_tag(type: 'submit', :class => "btn btn-info") do %>
+          <span class="oi oi-magnifying-glass"></span>
+        <% end %>
+        <%= link_to '<span class="oi oi-reload"></span>'.html_safe, products_path, class: 'btn btn-outline-dark ' %>
+        <%= link_to '<span class="oi oi-trash"></span>'.html_safe, delete_selected_products_path, class: 'btn btn-secondary', id: 'deleteAll', remote: true if current_admin%>
       </div>
-    </div>
-  </div> -->
-  <%= search_form_for @search, {class: 'form-inline col-12 pl-0 pr-0'} do |f| %>
-    <div class="input-group input-group-sm">
-      <%= f.search_field :title_cont , placeholder: 'title', class: "form-control", style: "max-width: 180px;" %>
-      <%= button_tag(type: 'submit', :class => "btn btn-info") do %>
-        <span class="oi oi-magnifying-glass"></span>
-      <% end %>
-      <%= link_to '<span class="oi oi-reload"></span>'.html_safe, products_path, class: 'btn btn-outline-dark ' %>
-      <%= link_to '<span class="oi oi-trash"></span>'.html_safe, delete_selected_products_path, class: 'btn btn-secondary', id: 'deleteAll', remote: true if current_admin%>
-    </div>
-  <% end %>
-</div>
-
-<div class="table-responsive">
-  <table class="table table-hover table-condensed">
-  <thead>
-    <tr class="bg-success">
-      <!-- <th><%# check_box_tag 'selectAll', value: 'selectAll'%></th> -->
-      <th>#</th>
-      <th>Id товара</th>
-      <%# <th>Img</th> %>
-      <th>Название</th>
-      <th>Варианты</th>
-      <th>Цены</th>
-      <th colspan="1"></th>
-    </tr>
-  </thead>
-  <tbody id="items_table">
-    <% @products.each do |product| %>
-      <tr>
-        <!-- <td><%# check_box_tag "product_ids[]", product.id %></td> -->
-        <td><%= product.id %></td>
-        <td><%= product.insid %></td>
-        <!--<td><%# render 'one_image', :image_link => Product.get_image(product.insid), image_style: "" %></td>-->
-        <td><%= product.title %></td>
-        <td><%= link_to '<span class="oi oi-eye"></span>'.html_safe, product if product.variants.present? %></td>
-        <td><%= product.price %></td>
-        <td><%= link_to '<span class="oi oi-trash"></span>'.html_safe, product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
     <% end %>
-  </tbody>
-</table>
+  </div>
+
+  <div class="table-responsive">
+    <table class="table table-hover table-condensed">
+      <thead>
+        <tr class="bg-success">
+          <!-- <th><%# check_box_tag 'selectAll', value: 'selectAll'%></th> -->
+          <th>#</th>
+          <th>Id товара</th>
+          <%# <th>Img</th> %>
+          <th>Название</th>
+          <th>Варианты</th>
+          <th>Цены</th>
+          <th colspan="1"></th>
+        </tr>
+      </thead>
+      <tbody id="items_table">
+        <% @products.each do |product| %>
+          <tr>
+            <!-- <td><%# check_box_tag "product_ids[]", product.id %></td> -->
+            <td><%= product.id %></td>
+            <td><%= product.insid %></td>
+            <!--<td><%# render 'one_image', :image_link => Product.get_image(product.insid), image_style: "" %></td>-->
+            <td><%= product.title %></td>
+            <td><%= link_to '<span class="oi oi-eye"></span>'.html_safe, product if product.variants.present? %></td>
+            <td><%= product.price %></td>
+            <td><%= link_to '<span class="oi oi-trash"></span>'.html_safe, product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+
 </div>
 
-
-<div class="apple_pagination">
-<%= will_paginate @products %>
-</div>
-</div>
+<%= render 'shared/paginate', object: @products %>
