--- a/app/views/cases/_form.html.erb
+++ b/app/views/cases/_form.html.erb
@@ -22,7 +22,7 @@
             <th>Вариант</th>
             <th>Кол-во</th>
             <th>Цена</th>
-            <%= tag td('Статус позиции') if @case.casetype == 'restock' %>
+            <%= tag.th('Статус позиции') if @case.casetype == 'restock' %>
           </tr>
         </thead>
         <tbody>
@@ -33,7 +33,7 @@
                   <br>Артикул: <%= line.variant.sku.to_s  %></td>
               <td><%= line.quantity %></td>
               <td><%= line.price %></td>
-              <%= tag td( line.variant.restocks.first.status ) if @case.casetype == 'restock'%>
+              <%= tag.td( line.variant.restocks.first.status ) if @case.casetype == 'restock'%>
             </tr>
           <% end %>
         </tbody>
