--- a/app/views/layouts/_admin_navigation.html.erb
+++ b/app/views/layouts/_admin_navigation.html.erb
@@ -16,6 +16,6 @@
 <li class="nav-item <%= 'active' if current_page?(email_setups_path) %>">
   <a class="nav-link <%= 'active' if current_page?(email_setups_path) %>" href="<%= email_setups_path %>">Почта</a>
 </li>
-<li class="nav-item %>">
+<li class="nav-item">
   <a class="nav-link" href="/sidekiq" target="_blank">sidekiq</a>
 </li>
