--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,6 @@
-<td><%= link_to user.id, edit_user_path(user) %></td>
+<td><%= link_to user.id, edit_user_path(user) %>
+<%= link_to '<span class="oi oi-transfer"></span>'.html_safe, impersonate_user_path(user), method: :post %>
+</td>
 <td><b>Имя</b> <%= user.name %> <b>Логин</b> <%= user.subdomain %><br>
     <b>Email</b> <%= user.email %><br>
     <b>Phone</b> <%= user.phone %><br>
