--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
 <h3>User</h3>
 <p>Name: <%= @user.name if @user.name %></p>
 <p>Email: <%= @user.email if @user.email %></p>
-<p><%= image_tag(@user.avatar_thumbnail) if @user.avatar_thumbnail.present?%></p>
+<p><%= image_tag(@user.image_thumb) if @user.image_thumb.present?%></p>
