--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,7 +17,7 @@
       <div class="input-group input-group-sm">
       <%= f.select :casetype_in, Case::CASETYPE, { :prompt => 'Тип заявки'}, class: "form-select", style: "max-width: 180px;" %>
         <% if Insint.present_work? %>
-        <%= f.select :custom_status_eq, Services::InsalesApi.new(Insint.current).statuses, {include_blank: false, prompt: 'Статус'}, class: "form-select", style: "max-width: 180px;" %>
+        <%= f.select :custom_status_eq, ApiInsales.new(Insint.current).statuses, {include_blank: false, prompt: 'Статус'}, class: "form-select", style: "max-width: 180px;" %>
         <% else %>
         <%= f.search_field :custom_status_eq , placeholder: 'Статус', class: "form-control", style: "max-width: 180px;" %>
         <% end %>
