--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), :html => { class: 'form-signin' }) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-signin', data: { turbo: false} }) do |f| %>
 <h2 class="form-signin-heading"><%= t('.sign_up', :default => "Регистрация") %></h2>
   <%= render "devise/shared/error_messages", resource: resource %>
     <%= f.input_field :email, autofocus: true , class: 'form-control', placeholder: "Email"  %>
