--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -5,6 +5,12 @@
   <%= f.input_field :email, autofocus: true , class: 'form-control', placeholder: "Email" %>
   <%= f.submit t('.sign_up', :default => "Отправить инструкции"), class: 'btn btn-success' %>
 <% end %>
+  <div class="form-sign-help">
+  <%# START add reCAPTCHA %>
+    <%= flash[:recaptcha_error] %>
+    <%= recaptcha_v3(action: 'password/reset') %>
+  <%# END add reCAPTCHA %>
+  </div>
 <div class="form-sign-help">
   <%= render "devise/shared/links" %>
 </div>
