--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -8,7 +8,7 @@
   <div class="form-sign-help">
   <%# START add reCAPTCHA %>
     <%= flash[:recaptcha_error] %>
-    <%= recaptcha_v3(action: 'password/reset') %>
+    <%= recaptcha_v3(action: 'password/reset', site_key: Rails.application.credentials.recaptcha_site_key) %>
   <%# END add reCAPTCHA %>
   </div>
 <div class="form-sign-help">
