--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -16,7 +16,7 @@
       <div class="input-group input-group-sm">
         <%= f.select :status_eq , Case::STATUS, { :prompt => 'Статус'}, class: "form-select", style: "max-width: 180px;" %>
         <%= f.search_field :number_eq , placeholder: 'number', class: "form-control", style: "max-width: 180px;" %>
-        <%= f.search_field :client_name_or_client_surname_cont , placeholder: 'client fio', class: "form-control", style: "max-width: 180px;" %>
+        <%= f.search_field :client_name_or_client_surname_or_client_email_cont , placeholder: 'client fio, email', class: "form-control", style: "max-width: 180px;" %>
         <%= f.select :casetype_in, Case::CASETYPE, { :prompt => 'Тип заявки'}, class: "form-select", style: "max-width: 180px;" %>
         <%= button_tag(type: 'submit', :class => "btn btn-info") do %>
           <span class="oi oi-magnifying-glass"></span>
