--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= simple_form_for(@payment) do |f| %>
+<%= simple_form_for(@payment, html: { data: { turbo: false} }) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
