--- a/app/views/insints/check.js.erb
+++ b/app/views/insints/check.js.erb
@@ -1,2 +1,2 @@
-$("#main-content").prepend('<%= j render partial: "layouts/notice_messages" %>');
-$(".alert").delay(4000).slideUp(200, function() { $(this).alert('close'); });
+$("#main-content").prepend('<%= j render partial: "shared/flash" %>');
+$(".alert").delay(5000).slideUp(200, function() { $(this).alert('close'); });
