--- a/app/views/users/delete_image.js.erb
+++ b/app/views/users/delete_image.js.erb
@@ -1,3 +1,3 @@
-$("#main-content").prepend('<%= j render partial: "layouts/notice_messages" %>');
+$("#main-content").prepend('<%= j render partial: "shared/flash" %>');
 $(".image-table").slideUp(200);
-$(".alert").delay(4000).slideUp(200, function() { $(this).alert('close'); });
+$(".alert").delay(5000).slideUp(200, function() { $(this).alert('close'); });
