--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,21 +1,21 @@
 <td><%= link_to user.id, edit_user_path(user) %>
+</td>
+<td>
 <%= link_to '<span class="oi oi-transfer"></span>'.html_safe, impersonate_user_path(user), method: :post %>
 </td>
 <td><b>Имя</b> <%= user.name %> <b>Логин</b> <%= user.subdomain %><br>
     <b>Email</b> <%= user.email %><br>
     <b>Phone</b> <%= user.phone %><br>
-    <b>Сайт</b> <%= link_to user.insints.first.subdomen, "http://"+user.insints.first.subdomen.to_s, target: "_blank" if user.insints.present? %>
+    <b></b> <%= link_to 'Сайт', "http://"+user.insints.first.subdomen.to_s, target: "_blank" if user.insints.present? %>
 </td>
 <td><b>Создан</b> <%= user.created_at.in_time_zone.strftime("%d/%m/%Y %H:%M" ).to_s%><br>
     <b>Последний вход</b> <%= user.last_sign_in_at.present? ? user.last_sign_in_at.in_time_zone.strftime("%d/%m/%Y %H:%M" ) : '' %><br>
     <b>Действует до</b> <%= user.valid_until.present? ? user.valid_until.strftime("%d-%m-%Y") : ''%>
 </td>
     <td><% insint = user.insints.first %>
-    <% if insint %>
-    Интег.: <%= link_to "Проверить", check_insints_path(insint), :remote => true, :method => :get, class: "btn btn-outline-info btn-sm" %>
-    <% end %>
-    </br>
-    Почта: <%= link_to "Проверить", check_email_users_path(user), :remote => true, :method => :get, class: "btn btn-outline-info btn-sm" %>
+    <%= link_to "Проверить Интег", check_insints_path(insint), remote: true, method: :get, class: "btn btn-outline-info btn-sm" if insint %>
+    <br>
+    <%= link_to "Проверить Почту", check_email_users_path(user), :remote => true, :method => :get, class: "btn btn-outline-info btn-sm" %>
     </td>
 <td>
     <span type="button" data-bs-toggle= "tooltip" data-bs-trigger= "click" data-bs-html= "true" 
@@ -28,6 +28,7 @@
 <td><%= user.favorite_setup_status %><br>
     Действует до - <%= user.favorite_setup_valid_until %> </td>
 <td><%= user.message_setup_status %><br>
-    Действует до - <%= user.message_setup_valid_until %>
+    Действует до - <%= user.message_setup_valid_until %><br>
+    <%= link_to "Add 2 week", add_message_setup_ability_users_path(user), :remote => true, :method => :get, class: "btn btn-outline-info btn-sm" %>
 </td>
 <td><%= link_to '<span class="oi oi-trash"></span>'.html_safe, user, method: :delete, data: { confirm: 'Are you sure?' }  if current_admin %></td>
