--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,6 +23,7 @@
     <thead class="align-middle">
       <tr class="bg-success">
         <th rowspan="2">#</th>
+        <th rowspan="2"></th>
         <th rowspan="2">Пользователь</th>
         <th rowspan="2">Даты</th>
         <th rowspan="2">Настройки</th>
