--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -25,6 +25,7 @@
 </td>
 <td><%= user.products_count %></td>
 <td><%= user.izb_count %></td>
+<td><%= user.restock_count %></td>
 <td><%= user.favorite_setup_status %><br>
     Действует до - <%= user.favorite_setup_valid_until %> </td>
 <td><%= user.message_setup_status %><br>
