--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -28,13 +28,14 @@
         <th rowspan="2">Даты</th>
         <th rowspan="2">Настройки</th>
         <th colspan="3">Всего</th>
-        <th colspan="3">Сервисы состояние</th>
+        <th colspan="4">Сервисы состояние</th>
         <th colspan="1" rowspan="2"></th>
       </tr>
       <tr class="bg-success mt-0">
         <th>Clients</th>
         <th>Products</th>
         <th>Favorites</th>
+        <th>Restock</th>
         <th>Избранное</th>
         <th colspan="2">Триггеры</th>
       </tr>
